[package]
name = "mdcopy"
version = "0.2.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.54", features = ["derive"] }
clipboard-rs = "0.3.1"
dirs = "6.0.0"
env_logger = "0.11.8"
log = "0.4.29"
markdown = "1.0.0"
serde = { version = "1.0.228", features = ["derive"] }
syntect = "5.3.0"
toml = "0.9.11"
ureq = "3.1.4"

[dev-dependencies]
tempfile = "3.24.0"
