[package]
name = "mdcopy"
version = "0.2.1"
edition = "2024"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.54", features = ["derive"] }
clipboard-rs = "0.3.1"
dirs = "6.0.0"
env_logger = "0.11.8"
log = "0.4.29"
markdown = "1.0.0"
serde = { version = "1.0.228", features = ["derive"] }
syntect = "5.3.0"
toml = "0.9.11"
ureq = "3.1.4"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSAttributedString", "NSData", "NSString", "NSArray", "NSURL", "NSRange"] }
objc2-app-kit = { version = "0.2", features = ["NSPasteboard", "NSTextAttachment", "NSImage", "NSFont"] }

[dev-dependencies]
tempfile = "3.24.0"
